typhon-cluster/apps/opencloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud
spec:
  selector:
    app: opencloud
  ports:
    - name: http
      port: 80
      targetPort: http
