typhon-cluster/apps/opencloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - cloud.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: opencloud
          port: 80
